// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state is set up with empty consignment metadata 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "black",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "black",
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
                "maxWidth": 540,
                "width": "100%",
              }
            }
          >
            <RCTScrollView
              centerContent={true}
              keyboardShouldPersistTaps="handled"
            >
              <View>
                <View
                  style={
                    Object {
                      "padding": 10,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          autoFocus={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Title"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Year"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Medium"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Width"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Height"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Depth"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value=""
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "margin": 10,
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#cccccc",
                              "fontSize": 20,
                              "marginBottom": 18,
                              "marginTop": 18,
                              "paddingLeft": 20,
                              "paddingRight": 20,
                              "textAlign": "center",
                            },
                            Object {
                              "flex": 1,
                              "paddingLeft": 10,
                              "textAlign": "left",
                            },
                            Object {
                              "fontFamily": "AGaramondPro-Regular",
                            },
                          ]
                        }
                      >
                        Units
                      </Text>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "green",
                              "borderColor": "white",
                              "borderRadius": 16,
                              "borderWidth": 1,
                              "height": 34,
                              "width": 64,
                            },
                            Object {
                              "backgroundColor": "black",
                            },
                          ]
                        }
                      >
                        <View
                          style={null}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "marginLeft": 8,
                                  "marginRight": 8,
                                  "marginTop": 9,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              IN
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "left": 6,
                                  "position": "absolute",
                                  "right": 6,
                                  "top": 4,
                                },
                                Object {
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderColor": "white",
                                    "borderRadius": 12,
                                    "borderWidth": 1,
                                    "height": 24,
                                    "width": 24,
                                  },
                                  Object {
                                    "borderColor": "white",
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#666666",
                              "fontFamily": "AGaramondPro-Regular",
                              "fontSize": 20,
                              "paddingTop": 8,
                            }
                          }
                        >
                          Category
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#666666",
                "height": 1,
              },
            ]
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "height": 56,
              "marginBottom": 0,
              "opacity": 1,
              "paddingTop": 18,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "white",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "AvantGardeGothicITC",
                  "fontSize": 14,
                  "textAlign": "center",
                },
              ]
            }
          >
            DONE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`state is set up with filled consignment metadata 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "black",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "black",
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
                "maxWidth": 540,
                "width": "100%",
              }
            }
          >
            <RCTScrollView
              centerContent={true}
              keyboardShouldPersistTaps="handled"
            >
              <View>
                <View
                  style={
                    Object {
                      "padding": 10,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          autoFocus={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Title"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value="My Work"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Year"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value="1983"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Medium"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value="Wood"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Width"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value="100"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Height"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value="100"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Depth"
                          placeholderTextColor="#666666"
                          rejectResponderTermination={true}
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                            ]
                          }
                          underlineColorAndroid="transparent"
                          value=""
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "margin": 10,
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#cccccc",
                              "fontSize": 20,
                              "marginBottom": 18,
                              "marginTop": 18,
                              "paddingLeft": 20,
                              "paddingRight": 20,
                              "textAlign": "center",
                            },
                            Object {
                              "flex": 1,
                              "paddingLeft": 10,
                              "textAlign": "left",
                            },
                            Object {
                              "fontFamily": "AGaramondPro-Regular",
                            },
                          ]
                        }
                      >
                        Units
                      </Text>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "green",
                              "borderColor": "white",
                              "borderRadius": 16,
                              "borderWidth": 1,
                              "height": 34,
                              "width": 64,
                            },
                            Object {
                              "backgroundColor": "black",
                            },
                          ]
                        }
                      >
                        <View
                          style={null}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "marginLeft": 8,
                                  "marginRight": 8,
                                  "marginTop": 9,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              IN
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "left": 6,
                                  "position": "absolute",
                                  "right": 6,
                                  "top": 4,
                                },
                                Object {
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderColor": "white",
                                    "borderRadius": 12,
                                    "borderWidth": 1,
                                    "height": 24,
                                    "width": 24,
                                  },
                                  Object {
                                    "borderColor": "white",
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessible={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "white",
                              "fontFamily": "AGaramondPro-Regular",
                              "fontSize": 20,
                              "paddingTop": 8,
                            }
                          }
                        >
                          Design
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#666666",
                "height": 1,
              },
            ]
          }
        />
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "height": 56,
              "marginBottom": 0,
              "opacity": 1,
              "paddingTop": 18,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "white",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "AvantGardeGothicITC",
                  "fontSize": 14,
                  "textAlign": "center",
                },
              ]
            }
          >
            DONE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`undefined 1`] = `undefined`;

exports[`undefined 2`] = `undefined`;

exports[`undefined 3`] = `undefined`;

exports[`undefined 4`] = `undefined`;

exports[`undefined 5`] = `undefined`;
